--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 <section class="home" id="home">
 <h3>HI THERE!</h3>
 <h1>I'm <span>Abhishek Singh </span></h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sit dolore aut harum alias temporibus explicabo. 
-    Laudantium maiores laborum quas magnam sed similique qui, nisi voluptas, quaerat nulla sit atque!</p>
+<p>I would like to turn out to be Frontend Developer where, I can work as a team member and
+    to secure a position where I can efficiently contribute my skills and abilities to the growth
+    of the organization and make my professional career.!</p>
     <a href="#about"><button class="btn">About Me <i class="fa fa-user"></i></button></a>
 </section>
 
